After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794991 - msdk: plugin fails to load
msdk: plugin fails to load
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.14.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 789886
 
 
Reported: 2018-04-04 22:04 UTC by U. Artie Eoff
Modified: 2018-04-05 00:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.13 KB, patch)
2018-04-04 22:11 UTC, U. Artie Eoff
rejected Details | Review
patch v2 (2.50 KB, patch)
2018-04-04 23:17 UTC, U. Artie Eoff
none Details | Review
patch v3 (2.43 KB, patch)
2018-04-05 00:17 UTC, U. Artie Eoff
committed Details | Review

Description U. Artie Eoff 2018-04-04 22:04:47 UTC
$ gst-inspect-1.0 msdk
0:00:00.192163330 26590      0x1204b20 ERROR                   msdk msdk.c:167:msdk_open_session: Intel Media SDK not available (undeveloped feature)
No such element or plugin 'msdk'

libva (master) heads/master-0-g3f3e70542a4f  https://github.com/01org/libva
msdk (master) heads/master-0-gc56e75c1beee  https://github.com/Intel-Media-SDK/MediaSDK
gstreamer (master) heads/master-0-g22fac0b21200  https://anongit.freedesktop.org/git/gstreamer/gstreamer
gst-plugins-base (master) heads/master-0-gc64d2cf3969f  https://anongit.freedesktop.org/git/gstreamer/gst-plugins-base
gst-plugins-good (master) heads/master-0-g0f1770f2bdfe  https://anongit.freedesktop.org/git/gstreamer/gst-plugins-good
gst-plugins-bad (master) heads/master-0-gfc989ce544c5  https://anongit.freedesktop.org/git/gstreamer/gst-plugins-bad
gstreamer-vaapi (master) heads/master-0-g966d4d0476a9  https://anongit.freedesktop.org/git/gstreamer/gstreamer-vaapi
Comment 1 U. Artie Eoff 2018-04-04 22:11:23 UTC
Created attachment 370534 [details] [review]
patch
Comment 2 sreerenj 2018-04-04 22:22:41 UTC
Review of attachment 370534 [details] [review]:

There is a property called "hardware" in decoder, vpp and encoder elements to choose between hardware and software implementations.
This is a useful feature to debug issues in hardware acceleration but unfortunately software implementation is only supported in windows.
I believe this issue should be fixed in mediasdk side. WDT?
Comment 3 U. Artie Eoff 2018-04-04 22:43:32 UTC
Review of attachment 370534 [details] [review]:

Actually, I was wrong about MFX_IMPL_HARDWARE_ANY... it seems to work fine.  So we just need a way for msdk_is_available to invoke msdk_open_session with an "AUTO" to check for SW and/or HW availability.
Comment 4 sreerenj 2018-04-04 22:45:05 UTC
(In reply to U. Artie Eoff from comment #3)
> Review of attachment 370534 [details] [review] [review]:
> 
> Actually, I was wrong about MFX_IMPL_HARDWARE_ANY... it seems to work fine. 
> So we just need a way for msdk_is_available to invoke msdk_open_session with
> an "AUTO" to check for SW and/or HW availability.

Exactly :)
Comment 5 U. Artie Eoff 2018-04-04 23:17:04 UTC
Created attachment 370535 [details] [review]
patch v2
Comment 6 sreerenj 2018-04-04 23:49:29 UTC
Review of attachment 370535 [details] [review]:

git apply failed...Can you please rebase it on master?
Also remove the trailing whitespaces in 28, 29, 42, 52, 61
Comment 7 U. Artie Eoff 2018-04-05 00:17:35 UTC
Created attachment 370538 [details] [review]
patch v3

This version is a direct upload of the file from `git format-patch`... my previous patch was a copy/paste text upload (which I guess introduced the ws artifacts).  Patch is already based on latest master fc989ce544c5.  Let me know if you still have `git am/apply` issues.
Comment 8 sreerenj 2018-04-05 00:25:59 UTC
(In reply to U. Artie Eoff from comment #7)
> Created attachment 370538 [details] [review] [review]
> patch v3
> 
> This version is a direct upload of the file from `git format-patch`... my
> previous patch was a copy/paste text upload (which I guess introduced the ws
> artifacts).  Patch is already based on latest master fc989ce544c5.  Let me
> know if you still have `git am/apply` issues.

There is a slight indentation issue, but I will fix it locally.
Next time onwards please run gst-indent-1.0 on all *.c files before git format patch.
Comment 9 U. Artie Eoff 2018-04-05 00:27:58 UTC
(In reply to sreerenj from comment #8)
> (In reply to U. Artie Eoff from comment #7)
> > Created attachment 370538 [details] [review] [review] [review]
> > patch v3
> > 
> > This version is a direct upload of the file from `git format-patch`... my
> > previous patch was a copy/paste text upload (which I guess introduced the ws
> > artifacts).  Patch is already based on latest master fc989ce544c5.  Let me
> > know if you still have `git am/apply` issues.
> 
> There is a slight indentation issue, but I will fix it locally.
> Next time onwards please run gst-indent-1.0 on all *.c files before git
> format patch.

Thanks.  Good to know and will comply going forward.
Comment 10 U. Artie Eoff 2018-04-05 00:30:51 UTC
(In reply to sreerenj from comment #8)
> (In reply to U. Artie Eoff from comment #7)
> > Created attachment 370538 [details] [review] [review] [review]
> > patch v3
> > 
> > This version is a direct upload of the file from `git format-patch`... my
> > previous patch was a copy/paste text upload (which I guess introduced the ws
> > artifacts).  Patch is already based on latest master fc989ce544c5.  Let me
> > know if you still have `git am/apply` issues.
> 
> There is a slight indentation issue, but I will fix it locally.
> Next time onwards please run gst-indent-1.0 on all *.c files before git
> format patch.

What provides gst-indent-1.0?
Comment 11 sreerenj 2018-04-05 00:35:38 UTC
(In reply to U. Artie Eoff from comment #10)
> (In reply to sreerenj from comment #8)
> > (In reply to U. Artie Eoff from comment #7)
> > > Created attachment 370538 [details] [review] [review] [review] [review]
> > > patch v3
> > > 
> > > This version is a direct upload of the file from `git format-patch`... my
> > > previous patch was a copy/paste text upload (which I guess introduced the ws
> > > artifacts).  Patch is already based on latest master fc989ce544c5.  Let me
> > > know if you still have `git am/apply` issues.
> > 
> > There is a slight indentation issue, but I will fix it locally.
> > Next time onwards please run gst-indent-1.0 on all *.c files before git
> > format patch.
> 
> What provides gst-indent-1.0?

It comes up with gstreamer core: https://cgit.freedesktop.org/gstreamer/gstreamer/tree/tools
Comment 12 sreerenj 2018-04-05 00:36:36 UTC
Review of attachment 370538 [details] [review]:

Pushed as
commit 275d754156d6113568bc7f74e184a3b41393e49a in master

Also cherry-picked to 1.14.